fix animation overflow on mobile

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -40,3 +40,8 @@ html {
 *:after {
   box-sizing: inherit;
 }
+
+#root {
+  position: relative;
+  overflow: hidden;
+}
